docs/0.14/_sources/api/gammapy.modeling.models.GaussianSpectralModel.rst.txt
GaussianSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: GaussianSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~GaussianSpectralModel.parameters
      ~GaussianSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~GaussianSpectralModel.__call__
      ~GaussianSpectralModel.copy
      ~GaussianSpectralModel.create
      ~GaussianSpectralModel.energy_flux
      ~GaussianSpectralModel.energy_flux_error
      ~GaussianSpectralModel.evaluate
      ~GaussianSpectralModel.evaluate_error
      ~GaussianSpectralModel.from_dict
      ~GaussianSpectralModel.integral
      ~GaussianSpectralModel.integral_error
      ~GaussianSpectralModel.inverse
      ~GaussianSpectralModel.plot
      ~GaussianSpectralModel.plot_error
      ~GaussianSpectralModel.spectral_index
      ~GaussianSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
